--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,39 @@
-<p>home works!</p>
+<div class=" col-sm-5 container">
+  <div class="d-flex w-80 ">
+    <h6 class="mb-2">{{info.username}}</h6>
+  </div>
+    <div >
+    <textarea  style="width:100%;"[(ngModel)]="newPost.text" placeholder="Enter your post here..."></textarea>
+    </div>
+<div style="position: relative;left:0;bottom:0" >
+  <button type="submit"  (click)="addPost()" class="btn btn-primary ">
+    <i></i>
+     Save
+  </button>
+  <button type="submit" class="btn btn-primary pull-right">
+    <i></i>
+    Cancel
+  </button>
+</div>
+<br>
+  <br>
+
+<div  id="posts">
+  <h3>Post</h3>
+  <br><br>
+  <div *ngFor="let post of allPosts">
+    <div>
+      <div class="list-group-item list-group-item-action flex-column align-items-start">
+
+        <div class="d-flex w-80 justify-content-between">
+          <h5 class="mb-2">{{post['author'].username}}</h5>
+        </div>
+        <div>
+          <h6>{{post['dateAndTime']}}</h6>
+        </div>
+        <span>
+            <span >
+              {{post['text']}}
+            </span>
+          </span>
+      </div>
