--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #14a4ac">
+<!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #14a4ac">
   <a class="navbar-brand" routerLink="home">
     <div>Wall</div>
   </a>
@@ -17,4 +17,13 @@
 
     </ul>
   </div>
-</nav>
+</nav>-->
+
+
+<div class="sidenav">
+  <a href="home">Wall</a>
+  <a href="profile">Profile</a>
+  <a href="register">Register</a>
+  <a href="login">Login</a>
+</div>
+
