--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,3 +1,10 @@
+
+<head>
+  <script>
+    var global = window;
+  </script>
+</head>
+
 <div class="container">
   <div class="row">
     <div class="offset-3"></div>
