--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,29 +1,10 @@
-<!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #14a4ac">
-  <a class="navbar-brand" routerLink="home">
-    <div>Wall</div>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-
-    <ul id="user" class="navbar-nav ml-auto" style="margin-right: 5%">
-      <li *ngIf="userRole === ''" class="nav-item active" >
-        <a class="nav-link" routerLink="login" >Log In </a>
-      </li>
-      <li  class="nav-item active" >
-        <a class="nav-link" routerLink="register">Register </a>
-
-    </ul>
-  </div>
-</nav>-->
-
 
 <div class="sidenav">
   <a href="home">Wall</a>
   <a href="profile">Profile</a>
+  <a >Notifications</a>
   <a href="register">Register</a>
-  <a href="login">Login</a>
+  <a *ngIf="info.username==null" href="login">Login</a>
+  <a  *ngIf="info.username!=null"(click)="logout()" href="login"> Log out</a>
 </div>
 
